Makes services public (closes #20)

--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/credential.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/credential.yml
@@ -8,6 +8,8 @@ services:
             - "%lightsaml.own.entity_id%"
             - "@lightsaml.own.credential_store"
             - []
+        public: true
 
     lightsaml.credential.credential_store_factory:
         class: LightSaml\Store\Credential\Factory\CredentialFactory
+        public: true
