--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/profile.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/profile.yml
@@ -3,13 +3,16 @@ services:
         class: LightSaml\Builder\Profile\Metadata\MetadataProfileBuilder
         arguments:
             - "@lightsaml.container.build"
+        public: true
 
     ligthsaml.profile.login_factory:
         class: LightSaml\Builder\Profile\WebBrowserSso\Sp\SsoSpSendAuthnRequestProfileBuilderFactory
         arguments:
             - "@lightsaml.container.build"
+        public: true
 
     ligthsaml.profile.acs:
         class: LightSaml\Builder\Profile\WebBrowserSso\Sp\SsoSpReceiveResponseProfileBuilder
         arguments:
             - "@lightsaml.container.build"
+        public: true
