--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/container.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/container.yml
@@ -3,3 +3,4 @@ services:
         class: LightSaml\SymfonyBridgeBundle\Bridge\Container\BuildContainer
         arguments:
             - "@service_container"
+        public: true
