--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/own.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/own.yml
@@ -5,9 +5,11 @@ parameters:
 services:
     lightsaml.own.credential_store:
         class: LightSaml\Store\Credential\CompositeCredentialStore
+        public: true
 
     lightsaml.own.entity_descriptor_provider:
         class: LightSaml\Builder\EntityDescriptor\SimpleEntityDescriptorBuilder
+        public: true
         # factory set in extension, all with arguments, differently based on symfony version
         # factory: ["@LightSaml\Provider\EntityDescriptor\FileEntityDescriptorProviderFactory", "fromEntitiesDescriptorFile"]
         # factory: ["@LightSaml\Provider\EntityDescriptor\FileEntityDescriptorProviderFactory", "fromEntityDescriptorFile"]
