--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/party.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/party.yml
@@ -1,15 +1,19 @@
 services:
     lightsaml.party.sp_entity_descriptor_store:
         class: LightSaml\Store\EntityDescriptor\CompositeEntityDescriptorStore
+        public: true
 
     lightsaml.party.idp_entity_descriptor_store:
         class: LightSaml\Store\EntityDescriptor\CompositeEntityDescriptorStore
+        public: true
 
     lightsaml.party.idp_entity_descriptor_store.file:
         class: LightSaml\Store\EntityDescriptor\FileEntityDescriptorStore
         arguments:
             - ~ # filename
         abstract: true
+        public: true
 
     lightsaml.party.trust_options_store:
         class: LightSaml\Store\TrustOptions\CompositeTrustOptionsStore
+        public: true
