--- a/src/LightSaml/SymfonyBridgeBundle/Resources/config/service.yml
+++ b/src/LightSaml/SymfonyBridgeBundle/Resources/config/service.yml
@@ -1,17 +1,21 @@
 services:
     lightsaml.service.name_id_validator:
         class: LightSaml\Validator\Model\NameId\NameIdValidator
+        public: true
 
     lightsaml.service.statement_validator:
         class: LightSaml\Validator\Model\Statement\StatementValidator
+        public: true
 
     lightsaml.service.subject_validator:
         class: LightSaml\Validator\Model\Subject\SubjectValidator
         arguments:
             - "@lightsaml.service.name_id_validator"
+        public: true
 
     lightsaml.service.assertion_time_validator:
         class: LightSaml\Validator\Model\Assertion\AssertionTimeValidator
+        public: true
 
     lightsaml.service.assertion_validator:
         class: LightSaml\Validator\Model\Assertion\AssertionValidator
@@ -19,21 +23,27 @@ services:
             - "@lightsaml.service.name_id_validator"
             - "@lightsaml.service.subject_validator"
             - "@lightsaml.service.statement_validator"
+        public: true
 
     lightsaml.service.endpoint_resolver.binding:
         class: LightSaml\Resolver\Endpoint\BindingEndpointResolver
+        public: true
 
     lightsaml.service.endpoint_resolver.descriptor_type:
         class: LightSaml\Resolver\Endpoint\DescriptorTypeEndpointResolver
+        public: true
 
     lightsaml.service.endpoint_resolver.service_type:
         class: LightSaml\Resolver\Endpoint\ServiceTypeEndpointResolver
+        public: true
 
     lightsaml.service.endpoint_resolver.index:
         class: LightSaml\Resolver\Endpoint\IndexEndpointResolver
+        public: true
 
     lightsaml.service.endpoint_resolver.location:
         class: LightSaml\Resolver\Endpoint\LocationEndpointResolver
+        public: true
 
     lightsaml.service.endpoint_resolver:
         class: LightSaml\Resolver\Endpoint\CompositeEndpointResolver
@@ -43,33 +53,40 @@ services:
             - [add, ["@lightsaml.service.endpoint_resolver.service_type"]]
             - [add, ["@lightsaml.service.endpoint_resolver.index"]]
             - [add, ["@lightsaml.service.endpoint_resolver.location"]]
+        public: true
 
     lightsaml.service.binding_factory:
         class: LightSaml\Binding\BindingFactory
         arguments:
             - "@lightsaml.system.event_dispatcher"
+        public: true
 
     lightsaml.service.credential_resolver_factory:
         class: LightSaml\Resolver\Credential\Factory\CredentialResolverFactory
         arguments:
             - "@lightsaml.credential.credential_store"
+        public: true
 
     lightsaml.service.credential_resolver:
         class: LightSaml\Resolver\Credential\CompositeFilterResolver
+        public: true
         # factory: ["@lightsaml.service.credential_resolver_factory", build] # set in extension, differently based on symfony version
 
     lightsaml.service.signature_resolver:
         class: LightSaml\Resolver\Signature\OwnSignatureResolver
         arguments:
             - "@lightsaml.service.credential_resolver"
+        public: true
 
     lightsaml.service.signature_validator:
         class: LightSaml\Validator\Model\Signature\SignatureValidator
         arguments:
             - "@lightsaml.service.credential_resolver"
+        public: true
 
     lightsaml.service.session_processor:
         class: LightSaml\Resolver\Session\SessionProcessor
         arguments:
             - "@lightsaml.store.sso_state"
             - "@lightsaml.system.time_provider"
+        public: true
