--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/framework-bundle": "~2.3|~3.0|~4.0|~5.0",
         "symfony/dependency-injection": "~2.3|~3.0|~4.0|~5.0",
         "symfony/yaml": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/http-foundation": "~5.0",
         "lightsaml/lightsaml": "~1.1"
     },
     "require-dev": {
